# asfml

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: homebrew-publish.yml  npm-publish.yml  pypi-publish.yml  release.yml  rust-ci.yml
crates/asfml-core/: Cargo.toml
crates/asfml-core/src/: auth.rs  cookie.rs  error.rs  lib.rs  models.rs
crates/asfml-core/tests/fixtures/: opendal_dev_list_30d.json  opendal_dev_search_release.json  opendal_release_email.json  opendal_release_thread.json  private_opendal_list_snapshot.json  private_opendal_reply_email_snapshot.json  private_opendal_reply_thread_snapshot.json  private_opendal_search_vote_snapshot.json
docs/: design.md  release.md
npm/: package.json
scripts/: build_npm_package.py  prepare_cargo_release.py  stage_npm_packages.py  stage_pypi_packages.py
src/: auth.rs  client.rs  cookie.rs  main.rs  models.rs  output.rs
tests/: private_api.rs  public_api.rs
