[package]
name = "asfml"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/asfml-core"]
default-members = [".", "crates/asfml-core"]
resolver = "3"

[dependencies]
asfml-core = { path = "crates/asfml-core" }
clap = { version = "4.5.40", features = ["derive"] }
comfy-table = "7.1.4"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
