[package]
name = "asfml-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"
