[package]
name = "asfml-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core library for reading Apache Pony Mail archives"
documentation = "https://docs.rs/asfml-core"
readme = "../../README.md"
keywords = ["apache", "ponymail", "mailing-list", "email", "archive"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"
